# folio

./: Cargo.toml  README.md
crates/folio-bin/: Cargo.toml
crates/folio-bin/src/: cli.rs  error.rs  main.rs
crates/folio-core/: Cargo.toml
crates/folio-core/src/: archive.rs  cap.rs  config.rs  error.rs  lib.rs  status.rs
crates/folio-storage/: Cargo.toml
crates/folio-storage/src/: error.rs  fs_atomic.rs  lib.rs
crates/folio-tui/: Cargo.toml
crates/folio-tui/src/: app.rs  data.rs  error.rs  event.rs  forms.rs  lib.rs  main.rs  state.rs  terminal.rs  widgets.rs
