[workspace]
members = [
    "crates/folio-bin",
    "crates/folio-core",
    "crates/folio-storage",
    "crates/folio-tui",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29"
tokio-stream = "0.1"
opener = "0.8"
dirs = "6.0"
