[package]
name = "folio-bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "folio"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
folio-core = { path = "../folio-core" }
folio-storage = { path = "../folio-storage" }
folio-tui = { path = "../folio-tui" }
chrono = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
