[package]
name = "folio-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
folio-core = { path = "../folio-core" }
folio-storage = { path = "../folio-storage" }
opener = "0.6"
ratatui = "0.26"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"