[package]
name = "folio-tui"
version = "0.1.0"
edition = "2024"

[lib]
name = "folio_tui"
path = "src/lib.rs"

[[bin]]
name = "folio-tui"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
crossterm = { workspace = true }
folio-core = { path = "../folio-core" }
folio-storage = { path = "../folio-storage" }
opener = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
